versao_nova/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> comandos
Rule 2     comandos -> comandos comando
Rule 3     comandos -> comando
Rule 4     comando -> decl_variavel
Rule 5     comando -> comando_escrever
Rule 6     comando -> comando_funcao
Rule 7     comando_escrever -> ESCREVER LPAREN expressao RPAREN PONTOVIRGULA
Rule 8     comando_escrever -> ESCREVER LPAREN decl_variavel RPAREN PONTOVIRGULA
Rule 9     comando_funcao -> FUNCAO VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variavel
Rule 10    comando_funcao -> FUNCAO VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variaveis_funcoes
Rule 11    comando_funcao -> FUNCAO VARIAVEL LPAREN parametros RPAREN DOISPONTOS corpo FIM
Rule 12    parametros -> parametro
Rule 13    parametros -> parametro VIRGULA parametros
Rule 14    parametro -> expressao
Rule 15    corpo -> funcoes
Rule 16    corpo -> funcoes corpo
Rule 17    funcoes -> decl_variaveis_funcoes
Rule 18    decl_variaveis_funcoes -> VARIAVEL IGUAL expressao PONTOVIRGULA
Rule 19    decl_variaveis_funcoes -> expressao PONTOVIRGULA
Rule 20    decl_variaveis_funcoes -> VARIAVEL IGUAL ALEATORIO LPAREN expressao RPAREN PONTOVIRGULA
Rule 21    decl_variaveis_funcoes -> VARIAVEL IGUAL VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA
Rule 22    decl_variaveis_funcoes -> VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA
Rule 23    decl_variavel -> VARIAVEL IGUAL expressao PONTOVIRGULA
Rule 24    decl_variavel -> expressao PONTOVIRGULA
Rule 25    decl_variavel -> VARIAVEL IGUAL ENTRADA LPAREN RPAREN PONTOVIRGULA
Rule 26    decl_variavel -> VARIAVEL IGUAL ALEATORIO LPAREN expressao RPAREN PONTOVIRGULA
Rule 27    decl_variavel -> VARIAVEL IGUAL VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA
Rule 28    expressao -> expressao MAIS expressao
Rule 29    expressao -> expressao MENOS expressao
Rule 30    expressao -> expressao MULTIPLICA expressao
Rule 31    expressao -> expressao DIVIDE expressao
Rule 32    expressao -> expressao CONCATENACAO expressao
Rule 33    expressao -> LPAREN expressao RPAREN
Rule 34    expressao -> NUMERO
Rule 35    expressao -> VARIAVEL
Rule 36    expressao -> STRING
Rule 37    expressao -> STRINGESPECIAL

Terminals, with rules where they appear

ALEATORIO            : 20 26
CONCATENACAO         : 32
DIVIDE               : 31
DOISPONTOS           : 9 10 11
ENTRADA              : 25
ESCREVER             : 7 8
FIM                  : 11
FUNCAO               : 9 10 11
IGUAL                : 18 20 21 23 25 26 27
LPAREN               : 7 8 9 10 11 20 21 22 25 26 27 33
MAIS                 : 28
MENOS                : 29
MULTIPLICA           : 30
NUMERO               : 34
PONTOVIRGULA         : 7 8 18 19 20 21 22 23 24 25 26 27
RPAREN               : 7 8 9 10 11 20 21 22 25 26 27 33
STRING               : 36
STRINGESPECIAL       : 37
VARIAVEL             : 9 10 11 18 20 21 21 22 23 25 26 27 27 35
VIRGULA              : 9 10 13
error                : 

Nonterminals, with rules where they appear

S                    : 0
comando              : 2 3
comando_escrever     : 5
comando_funcao       : 6
comandos             : 1 2
corpo                : 11 16
decl_variaveis_funcoes : 10 17
decl_variavel        : 4 8 9
expressao            : 7 14 18 19 20 23 24 26 28 28 29 29 30 30 31 31 32 32 33
funcoes              : 15 16
parametro            : 12 13
parametros           : 9 10 11 13 21 22 27

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . comandos
    (2) comandos -> . comandos comando
    (3) comandos -> . comando
    (4) comando -> . decl_variavel
    (5) comando -> . comando_escrever
    (6) comando -> . comando_funcao
    (23) decl_variavel -> . VARIAVEL IGUAL expressao PONTOVIRGULA
    (24) decl_variavel -> . expressao PONTOVIRGULA
    (25) decl_variavel -> . VARIAVEL IGUAL ENTRADA LPAREN RPAREN PONTOVIRGULA
    (26) decl_variavel -> . VARIAVEL IGUAL ALEATORIO LPAREN expressao RPAREN PONTOVIRGULA
    (27) decl_variavel -> . VARIAVEL IGUAL VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA
    (7) comando_escrever -> . ESCREVER LPAREN expressao RPAREN PONTOVIRGULA
    (8) comando_escrever -> . ESCREVER LPAREN decl_variavel RPAREN PONTOVIRGULA
    (9) comando_funcao -> . FUNCAO VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variavel
    (10) comando_funcao -> . FUNCAO VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variaveis_funcoes
    (11) comando_funcao -> . FUNCAO VARIAVEL LPAREN parametros RPAREN DOISPONTOS corpo FIM
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    VARIAVEL        shift and go to state 7
    ESCREVER        shift and go to state 10
    FUNCAO          shift and go to state 11
    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    S                              shift and go to state 1
    comandos                       shift and go to state 2
    comando                        shift and go to state 3
    decl_variavel                  shift and go to state 4
    comando_escrever               shift and go to state 5
    comando_funcao                 shift and go to state 6
    expressao                      shift and go to state 8

state 1

    (0) S' -> S .



state 2

    (1) S -> comandos .
    (2) comandos -> comandos . comando
    (4) comando -> . decl_variavel
    (5) comando -> . comando_escrever
    (6) comando -> . comando_funcao
    (23) decl_variavel -> . VARIAVEL IGUAL expressao PONTOVIRGULA
    (24) decl_variavel -> . expressao PONTOVIRGULA
    (25) decl_variavel -> . VARIAVEL IGUAL ENTRADA LPAREN RPAREN PONTOVIRGULA
    (26) decl_variavel -> . VARIAVEL IGUAL ALEATORIO LPAREN expressao RPAREN PONTOVIRGULA
    (27) decl_variavel -> . VARIAVEL IGUAL VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA
    (7) comando_escrever -> . ESCREVER LPAREN expressao RPAREN PONTOVIRGULA
    (8) comando_escrever -> . ESCREVER LPAREN decl_variavel RPAREN PONTOVIRGULA
    (9) comando_funcao -> . FUNCAO VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variavel
    (10) comando_funcao -> . FUNCAO VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variaveis_funcoes
    (11) comando_funcao -> . FUNCAO VARIAVEL LPAREN parametros RPAREN DOISPONTOS corpo FIM
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    $end            reduce using rule 1 (S -> comandos .)
    VARIAVEL        shift and go to state 7
    ESCREVER        shift and go to state 10
    FUNCAO          shift and go to state 11
    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    comando                        shift and go to state 15
    decl_variavel                  shift and go to state 4
    comando_escrever               shift and go to state 5
    comando_funcao                 shift and go to state 6
    expressao                      shift and go to state 8

state 3

    (3) comandos -> comando .

    VARIAVEL        reduce using rule 3 (comandos -> comando .)
    ESCREVER        reduce using rule 3 (comandos -> comando .)
    FUNCAO          reduce using rule 3 (comandos -> comando .)
    LPAREN          reduce using rule 3 (comandos -> comando .)
    NUMERO          reduce using rule 3 (comandos -> comando .)
    STRING          reduce using rule 3 (comandos -> comando .)
    STRINGESPECIAL  reduce using rule 3 (comandos -> comando .)
    $end            reduce using rule 3 (comandos -> comando .)


state 4

    (4) comando -> decl_variavel .

    VARIAVEL        reduce using rule 4 (comando -> decl_variavel .)
    ESCREVER        reduce using rule 4 (comando -> decl_variavel .)
    FUNCAO          reduce using rule 4 (comando -> decl_variavel .)
    LPAREN          reduce using rule 4 (comando -> decl_variavel .)
    NUMERO          reduce using rule 4 (comando -> decl_variavel .)
    STRING          reduce using rule 4 (comando -> decl_variavel .)
    STRINGESPECIAL  reduce using rule 4 (comando -> decl_variavel .)
    $end            reduce using rule 4 (comando -> decl_variavel .)


state 5

    (5) comando -> comando_escrever .

    VARIAVEL        reduce using rule 5 (comando -> comando_escrever .)
    ESCREVER        reduce using rule 5 (comando -> comando_escrever .)
    FUNCAO          reduce using rule 5 (comando -> comando_escrever .)
    LPAREN          reduce using rule 5 (comando -> comando_escrever .)
    NUMERO          reduce using rule 5 (comando -> comando_escrever .)
    STRING          reduce using rule 5 (comando -> comando_escrever .)
    STRINGESPECIAL  reduce using rule 5 (comando -> comando_escrever .)
    $end            reduce using rule 5 (comando -> comando_escrever .)


state 6

    (6) comando -> comando_funcao .

    VARIAVEL        reduce using rule 6 (comando -> comando_funcao .)
    ESCREVER        reduce using rule 6 (comando -> comando_funcao .)
    FUNCAO          reduce using rule 6 (comando -> comando_funcao .)
    LPAREN          reduce using rule 6 (comando -> comando_funcao .)
    NUMERO          reduce using rule 6 (comando -> comando_funcao .)
    STRING          reduce using rule 6 (comando -> comando_funcao .)
    STRINGESPECIAL  reduce using rule 6 (comando -> comando_funcao .)
    $end            reduce using rule 6 (comando -> comando_funcao .)


state 7

    (23) decl_variavel -> VARIAVEL . IGUAL expressao PONTOVIRGULA
    (25) decl_variavel -> VARIAVEL . IGUAL ENTRADA LPAREN RPAREN PONTOVIRGULA
    (26) decl_variavel -> VARIAVEL . IGUAL ALEATORIO LPAREN expressao RPAREN PONTOVIRGULA
    (27) decl_variavel -> VARIAVEL . IGUAL VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA
    (35) expressao -> VARIAVEL .

    IGUAL           shift and go to state 16
    PONTOVIRGULA    reduce using rule 35 (expressao -> VARIAVEL .)
    MAIS            reduce using rule 35 (expressao -> VARIAVEL .)
    MENOS           reduce using rule 35 (expressao -> VARIAVEL .)
    MULTIPLICA      reduce using rule 35 (expressao -> VARIAVEL .)
    DIVIDE          reduce using rule 35 (expressao -> VARIAVEL .)
    CONCATENACAO    reduce using rule 35 (expressao -> VARIAVEL .)


state 8

    (24) decl_variavel -> expressao . PONTOVIRGULA
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao

    PONTOVIRGULA    shift and go to state 17
    MAIS            shift and go to state 18
    MENOS           shift and go to state 19
    MULTIPLICA      shift and go to state 20
    DIVIDE          shift and go to state 21
    CONCATENACAO    shift and go to state 22


state 9

    (33) expressao -> LPAREN . expressao RPAREN
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    VARIAVEL        shift and go to state 24
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 23

state 10

    (7) comando_escrever -> ESCREVER . LPAREN expressao RPAREN PONTOVIRGULA
    (8) comando_escrever -> ESCREVER . LPAREN decl_variavel RPAREN PONTOVIRGULA

    LPAREN          shift and go to state 25


state 11

    (9) comando_funcao -> FUNCAO . VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variavel
    (10) comando_funcao -> FUNCAO . VARIAVEL LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variaveis_funcoes
    (11) comando_funcao -> FUNCAO . VARIAVEL LPAREN parametros RPAREN DOISPONTOS corpo FIM

    VARIAVEL        shift and go to state 26


state 12

    (34) expressao -> NUMERO .

    PONTOVIRGULA    reduce using rule 34 (expressao -> NUMERO .)
    MAIS            reduce using rule 34 (expressao -> NUMERO .)
    MENOS           reduce using rule 34 (expressao -> NUMERO .)
    MULTIPLICA      reduce using rule 34 (expressao -> NUMERO .)
    DIVIDE          reduce using rule 34 (expressao -> NUMERO .)
    CONCATENACAO    reduce using rule 34 (expressao -> NUMERO .)
    RPAREN          reduce using rule 34 (expressao -> NUMERO .)
    VIRGULA         reduce using rule 34 (expressao -> NUMERO .)


state 13

    (36) expressao -> STRING .

    PONTOVIRGULA    reduce using rule 36 (expressao -> STRING .)
    MAIS            reduce using rule 36 (expressao -> STRING .)
    MENOS           reduce using rule 36 (expressao -> STRING .)
    MULTIPLICA      reduce using rule 36 (expressao -> STRING .)
    DIVIDE          reduce using rule 36 (expressao -> STRING .)
    CONCATENACAO    reduce using rule 36 (expressao -> STRING .)
    RPAREN          reduce using rule 36 (expressao -> STRING .)
    VIRGULA         reduce using rule 36 (expressao -> STRING .)


state 14

    (37) expressao -> STRINGESPECIAL .

    PONTOVIRGULA    reduce using rule 37 (expressao -> STRINGESPECIAL .)
    MAIS            reduce using rule 37 (expressao -> STRINGESPECIAL .)
    MENOS           reduce using rule 37 (expressao -> STRINGESPECIAL .)
    MULTIPLICA      reduce using rule 37 (expressao -> STRINGESPECIAL .)
    DIVIDE          reduce using rule 37 (expressao -> STRINGESPECIAL .)
    CONCATENACAO    reduce using rule 37 (expressao -> STRINGESPECIAL .)
    RPAREN          reduce using rule 37 (expressao -> STRINGESPECIAL .)
    VIRGULA         reduce using rule 37 (expressao -> STRINGESPECIAL .)


state 15

    (2) comandos -> comandos comando .

    VARIAVEL        reduce using rule 2 (comandos -> comandos comando .)
    ESCREVER        reduce using rule 2 (comandos -> comandos comando .)
    FUNCAO          reduce using rule 2 (comandos -> comandos comando .)
    LPAREN          reduce using rule 2 (comandos -> comandos comando .)
    NUMERO          reduce using rule 2 (comandos -> comandos comando .)
    STRING          reduce using rule 2 (comandos -> comandos comando .)
    STRINGESPECIAL  reduce using rule 2 (comandos -> comandos comando .)
    $end            reduce using rule 2 (comandos -> comandos comando .)


state 16

    (23) decl_variavel -> VARIAVEL IGUAL . expressao PONTOVIRGULA
    (25) decl_variavel -> VARIAVEL IGUAL . ENTRADA LPAREN RPAREN PONTOVIRGULA
    (26) decl_variavel -> VARIAVEL IGUAL . ALEATORIO LPAREN expressao RPAREN PONTOVIRGULA
    (27) decl_variavel -> VARIAVEL IGUAL . VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    ENTRADA         shift and go to state 29
    ALEATORIO       shift and go to state 30
    VARIAVEL        shift and go to state 27
    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 28

state 17

    (24) decl_variavel -> expressao PONTOVIRGULA .

    VARIAVEL        reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    ESCREVER        reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    FUNCAO          reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    LPAREN          reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    NUMERO          reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    STRING          reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    STRINGESPECIAL  reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    $end            reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)
    RPAREN          reduce using rule 24 (decl_variavel -> expressao PONTOVIRGULA .)


state 18

    (28) expressao -> expressao MAIS . expressao
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    VARIAVEL        shift and go to state 24
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 31

state 19

    (29) expressao -> expressao MENOS . expressao
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    VARIAVEL        shift and go to state 24
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 32

state 20

    (30) expressao -> expressao MULTIPLICA . expressao
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    VARIAVEL        shift and go to state 24
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 33

state 21

    (31) expressao -> expressao DIVIDE . expressao
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    VARIAVEL        shift and go to state 24
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 34

state 22

    (32) expressao -> expressao CONCATENACAO . expressao
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL

    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    VARIAVEL        shift and go to state 24
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 35

state 23

    (33) expressao -> LPAREN expressao . RPAREN
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao

    RPAREN          shift and go to state 36
    MAIS            shift and go to state 18
    MENOS           shift and go to state 19
    MULTIPLICA      shift and go to state 20
    DIVIDE          shift and go to state 21
    CONCATENACAO    shift and go to state 22


state 24

    (35) expressao -> VARIAVEL .

    RPAREN          reduce using rule 35 (expressao -> VARIAVEL .)
    MAIS            reduce using rule 35 (expressao -> VARIAVEL .)
    MENOS           reduce using rule 35 (expressao -> VARIAVEL .)
    MULTIPLICA      reduce using rule 35 (expressao -> VARIAVEL .)
    DIVIDE          reduce using rule 35 (expressao -> VARIAVEL .)
    CONCATENACAO    reduce using rule 35 (expressao -> VARIAVEL .)
    PONTOVIRGULA    reduce using rule 35 (expressao -> VARIAVEL .)
    VIRGULA         reduce using rule 35 (expressao -> VARIAVEL .)


state 25

    (7) comando_escrever -> ESCREVER LPAREN . expressao RPAREN PONTOVIRGULA
    (8) comando_escrever -> ESCREVER LPAREN . decl_variavel RPAREN PONTOVIRGULA
    (28) expressao -> . expressao MAIS expressao
    (29) expressao -> . expressao MENOS expressao
    (30) expressao -> . expressao MULTIPLICA expressao
    (31) expressao -> . expressao DIVIDE expressao
    (32) expressao -> . expressao CONCATENACAO expressao
    (33) expressao -> . LPAREN expressao RPAREN
    (34) expressao -> . NUMERO
    (35) expressao -> . VARIAVEL
    (36) expressao -> . STRING
    (37) expressao -> . STRINGESPECIAL
    (23) decl_variavel -> . VARIAVEL IGUAL expressao PONTOVIRGULA
    (24) decl_variavel -> . expressao PONTOVIRGULA
    (25) decl_variavel -> . VARIAVEL IGUAL ENTRADA LPAREN RPAREN PONTOVIRGULA
    (26) decl_variavel -> . VARIAVEL IGUAL ALEATORIO LPAREN expressao RPAREN PONTOVIRGULA
    (27) decl_variavel -> . VARIAVEL IGUAL VARIAVEL LPAREN parametros RPAREN PONTOVIRGULA

    LPAREN          shift and go to state 9
    NUMERO          shift and go to state 12
    VARIAVEL        shift and go to state 39
    STRING          shift and go to state 13
    STRINGESPECIAL  shift and go to state 14

    expressao                      shift and go to state 37
    decl_variavel                  shift and go to state 38

state 26

    (9) comando_funcao -> FUNCAO VARIAVEL . LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variavel
    (10) comando_funcao -> FUNCAO VARIAVEL . LPAREN parametros RPAREN VIRGULA DOISPONTOS decl_variaveis_funcoes
    (11) comando_funcao -> FUNCAO VARIAVEL . LPAREN parametros RPAREN DOISPONTOS corpo FIM

    LPAREN          shift and go to state 40


state 27

    (27) decl_variavel -> VARIAVEL IGUAL VARIAVEL . LPAREN parametros RPAREN PONTOVIRGULA
    (35) expressao -> VARIAVEL .

    LPAREN          shift and go to state 41
    PONTOVIRGULA    reduce using rule 35 (expressao -> VARIAVEL .)
    MAIS            reduce using rule 35 (expressao -> VARIAVEL .)
    MENOS           reduce using rule 35 (expressao -> VARIAVEL .)
    MULTIPLICA      reduce using rule 35 (expressao -> VARIAVEL .)
    DIVIDE          reduce using rule 35 (expressao -> VARIAVEL .)
    CONCATENACAO    reduce using rule 35 (expressao -> VARIAVEL .)


state 28

    (23) decl_variavel -> VARIAVEL IGUAL expressao . PONTOVIRGULA
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao

    PONTOVIRGULA    shift and go to state 42
    MAIS            shift and go to state 18
    MENOS           shift and go to state 19
    MULTIPLICA      shift and go to state 20
    DIVIDE          shift and go to state 21
    CONCATENACAO    shift and go to state 22


state 29

    (25) decl_variavel -> VARIAVEL IGUAL ENTRADA . LPAREN RPAREN PONTOVIRGULA

    LPAREN          shift and go to state 43


state 30

    (26) decl_variavel -> VARIAVEL IGUAL ALEATORIO . LPAREN expressao RPAREN PONTOVIRGULA

    LPAREN          shift and go to state 44


state 31

    (28) expressao -> expressao MAIS expressao .
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao

    PONTOVIRGULA    reduce using rule 28 (expressao -> expressao MAIS expressao .)
    MAIS            reduce using rule 28 (expressao -> expressao MAIS expressao .)
    MENOS           reduce using rule 28 (expressao -> expressao MAIS expressao .)
    CONCATENACAO    reduce using rule 28 (expressao -> expressao MAIS expressao .)
    RPAREN          reduce using rule 28 (expressao -> expressao MAIS expressao .)
    VIRGULA         reduce using rule 28 (expressao -> expressao MAIS expressao .)
    MULTIPLICA      shift and go to state 20
    DIVIDE          shift and go to state 21

  ! MULTIPLICA      [ reduce using rule 28 (expressao -> expressao MAIS expressao .) ]
  ! DIVIDE          [ reduce using rule 28 (expressao -> expressao MAIS expressao .) ]
  ! MAIS            [ shift and go to state 18 ]
  ! MENOS           [ shift and go to state 19 ]
  ! CONCATENACAO    [ shift and go to state 22 ]


state 32

    (29) expressao -> expressao MENOS expressao .
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao

    PONTOVIRGULA    reduce using rule 29 (expressao -> expressao MENOS expressao .)
    MAIS            reduce using rule 29 (expressao -> expressao MENOS expressao .)
    MENOS           reduce using rule 29 (expressao -> expressao MENOS expressao .)
    CONCATENACAO    reduce using rule 29 (expressao -> expressao MENOS expressao .)
    RPAREN          reduce using rule 29 (expressao -> expressao MENOS expressao .)
    VIRGULA         reduce using rule 29 (expressao -> expressao MENOS expressao .)
    MULTIPLICA      shift and go to state 20
    DIVIDE          shift and go to state 21

  ! MULTIPLICA      [ reduce using rule 29 (expressao -> expressao MENOS expressao .) ]
  ! DIVIDE          [ reduce using rule 29 (expressao -> expressao MENOS expressao .) ]
  ! MAIS            [ shift and go to state 18 ]
  ! MENOS           [ shift and go to state 19 ]
  ! CONCATENACAO    [ shift and go to state 22 ]


state 33

    (30) expressao -> expressao MULTIPLICA expressao .
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao

    PONTOVIRGULA    reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)
    MAIS            reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)
    MENOS           reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)
    MULTIPLICA      reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)
    DIVIDE          reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)
    CONCATENACAO    reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)
    RPAREN          reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)
    VIRGULA         reduce using rule 30 (expressao -> expressao MULTIPLICA expressao .)

  ! MAIS            [ shift and go to state 18 ]
  ! MENOS           [ shift and go to state 19 ]
  ! MULTIPLICA      [ shift and go to state 20 ]
  ! DIVIDE          [ shift and go to state 21 ]
  ! CONCATENACAO    [ shift and go to state 22 ]


state 34

    (31) expressao -> expressao DIVIDE expressao .
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao

    PONTOVIRGULA    reduce using rule 31 (expressao -> expressao DIVIDE expressao .)
    MAIS            reduce using rule 31 (expressao -> expressao DIVIDE expressao .)
    MENOS           reduce using rule 31 (expressao -> expressao DIVIDE expressao .)
    MULTIPLICA      reduce using rule 31 (expressao -> expressao DIVIDE expressao .)
    DIVIDE          reduce using rule 31 (expressao -> expressao DIVIDE expressao .)
    CONCATENACAO    reduce using rule 31 (expressao -> expressao DIVIDE expressao .)
    RPAREN          reduce using rule 31 (expressao -> expressao DIVIDE expressao .)
    VIRGULA         reduce using rule 31 (expressao -> expressao DIVIDE expressao .)

  ! MAIS            [ shift and go to state 18 ]
  ! MENOS           [ shift and go to state 19 ]
  ! MULTIPLICA      [ shift and go to state 20 ]
  ! DIVIDE          [ shift and go to state 21 ]
  ! CONCATENACAO    [ shift and go to state 22 ]


state 35

    (32) expressao -> expressao CONCATENACAO expressao .
    (28) expressao -> expressao . MAIS expressao
    (29) expressao -> expressao . MENOS expressao
    (30) expressao -> expressao . MULTIPLICA expressao
    (31) expressao -> expressao . DIVIDE expressao
    (32) expressao -> expressao . CONCATENACAO expressao
